# FoodOrders

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0379ea1acee0_second.py  ac604326a1f8_initial_migration.py  b60da0b9f33a_second.py
src/config/: config.py  constants.py  messages.py
src/database/: db.py  models.py
src/repository/: meals.py  orders.py
src/routes/: meals.py  orders.py
src/schemas/: meals.py  orders.py
src/services/: files.py
